--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -9,7 +9,7 @@
     <div class="row">
 	    <div class="col-sm-6">
     		<p>
-            I have over 6 years of experience as a software engineer, and have worked
+            I have over 13 years of experience as a software engineer, and have worked
             at both small startups and large organizations. While I'm a proficient full-stack
             developer, my expertise is in building scalable backend services (API services, stream processing,
             and async mechanisms).
@@ -27,18 +27,7 @@
 		    <h3 style="margin-top:0;">Highlights</h3>
 		    <ul>
     			<li>
-            Migrated a monolithic Heroku Ruby on Rails API to multiple Scala
-            services hosted on AWS. Delivered ahead of schedule, projected to save $18k/quarter.
-    			</li>
-          <li>
-            Presented research and proof-of-concept to convince team to move from Hadoop MR to Spark; reduced nodes by 60% and ran 5-8x faster.
-          <li>
-            Automated test automation in ramp-up to large data center migration, saving hundreds of developer hours.
-    			<li>
-            Presented "Understanding the GIL to Prevent Race Conditions" at RubyConf 2016.
-    			</li>
-    			<li>
-            Awarded patent for novel approach to item normalization in 3rd party catalog data feeds.
+            Designed, developed and delivered together with my team, a messaging data pileline in Apache Kafka for the asychronous comunication between distributed systems. 
     			</li>
 		    </ul>
 	    </div>
