--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -27,7 +27,7 @@
 		    <h3 style="margin-top:0;">Highlights</h3>
 		    <ul>
     			<li>
-            Designed, developed and delivered together with my team, a messaging data pileline in Apache Kafka for the asychronous comunication between distributed systems. 
+            Designed, developed and delivered, a messaging data pileline in Apache Kafka for the asychronous comunication between distributed systems. 
     			</li>
 		    </ul>
 	    </div>
