--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -29,6 +29,22 @@
     			<li>
             Designed, developed and delivered, a messaging data pileline in Apache Kafka for the asychronous comunication between distributed systems. 
     			</li>
+			<li>
+            Maintained, planned und delivered fixes for the batch processing system. Designed and delivered the new version as container ready michroservices with Springboot.
+    			</li>
+			    			<li>
+            Migrated portal components from Oracle ADF to Angular 7
+    			</li>
+			    <li>
+				    Set up and establishment of procedures for managing software builds and environments for the developed applications.
+
+Technology and Operations gating process to get releases into production.
+
+Stream line the build and release process through continuous integration, source code control, scripting etc.
+Implementation of build and deployment approaches for various projects and other related applications.
+
+Assisting with the setup of relevant environments and identification of environment gaps, including working with Technology and Operations on new environment setups.
+				    </li>
 		    </ul>
 	    </div>
     </div>
