--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,5 +126,15 @@
 
      <!-- Custom Theme JavaScript -->
      <script src="{{ site.baseurl }}{{ "/js/freelancer.js" }}"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149356899-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149356899-1');
+</script>
+
   </body>
 </html>
